# interview-algorand

./: Dockerfile  README.md  interview_algorand-0.1.0-py3-none-any.whl  pyproject.toml
interview_algorand/: config.py  console.py  github.py
tests/: test_console.py
